# Electric_Wave

./: CMakeLists.txt  README.md  em_1d_anim.py  em_1d_sim.py  pyproject.toml  setup.cfg  verify_physics_plot.py
examples/: example_config.json  run_simulation.py
include/: boundary_conditions.h  simulation.h  visualization.h
notebooks/: demo.ipynb
results_stable/: verification_dt0.5.txt
results_unstable/: verification_dt1.01.txt
scripts/: build.sh  run.sh
src/: boundary_conditions.cpp  main.cpp  simulation.cpp  visualization.cpp
src/electric_wave_py/: __init__.py  boundary.py  main.py  simulation.py  solver.py  utils.py  visualization.py
tests/: test_simulation.cpp  test_simulation.py  test_visualization.py
