[tool.poetry]
name = "electric_wave_py"
version = "0.1.0"
description = "A project for simulating the propagation of one-dimensional electromagnetic waves."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
matplotlib = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"