[metadata]
name = electric_wave_py
version = 0.1.0
description = A project for simulating the propagation of one-dimensional electromagnetic waves.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/electric_wave_py
license = MIT

[options]
packages = find:
install_requires =
    numpy
    matplotlib

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*